--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ section {
 }
 
 h1 {
-    font-size: 3rem;
+    font-size: 3.5rem;
     margin-bottom: 20px;
     color: #0a2463;
 }
@@ -146,7 +146,7 @@ p {
 .social-icon {
     width: 40px;
     height: 40px;
-    background-color: #0a2463;
+    background-color: #3e92cc;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -154,10 +154,18 @@ p {
     color: white;
     text-decoration: none;
     transition: all 0.3s ease;
+    overflow: hidden;
+}
+
+.social-icon img {
+    max-width: 40px; /* Control the image size */
+    max-height: 40px; /* Control the image size */
+    width: auto;
+    height: auto;
 }
 
 .social-icon:hover {
-    background-color: #3e92cc;
+    background-color: #82c1eed9;
     transform: translateY(-3px);
 }
 
